--- a/static/styles/catagories/history.css
+++ b/static/styles/catagories/history.css
@@ -14,8 +14,11 @@ html, body {
   font-style: normal;
   font-size: 1.5em;
   color: white;
-  padding-left: 300px;
-  padding-bottom: 62vh;
+  padding-left: 200px;
+  position: fixed;
+  z-index: 1;
+  top: 15em;
+  
 
 }
 
@@ -27,10 +30,40 @@ html, body {
   display: block;
 }
 
-.text {
-  position: absolute;
+.pagetitle {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4.5em;
+  padding-top: 4em;
+  color: white;
+  padding-left: 200px;
+  line-height: 1em;
+  position: fixed;
   z-index: 1;
-  padding-top: 20%;
+}
+
+.text {
+  padding-left: 50px;
+  width: 65%;
+  color: white;
+  position: absolute;
+  top: 25em;
+
+}
+
+.pagetitle, .sub {
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+p {
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5em;
+  line-height: 1.3em;
+  color: white;
+  margin-bottom: 1.5em
 }
 
 .history-container{
