--- a/static/styles/catagories/preserving.css
+++ b/static/styles/catagories/preserving.css
@@ -2,11 +2,12 @@
     position: relative;
     width: 100vw;
     height: 100%;
+    padding-bottom: 3px;
 }
 
 .hero {
     width: 100vw;
-    height: auto;
+    height: 100vh;
     object-fit: cover;
     display: block;
     z-index: -1;
@@ -14,37 +15,14 @@
 }
 
 .pagetitle {
-    position: absolute;
-    z-index: 1;
+  font-family: "adobe-garamond-pro", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4.5em;
+  padding-top: 4em;
+  color: white;
+  padding-left: 200px;
+  line-height: 1em;
+  position: absolute;
+  z-index: 1;
 }
-
-
-.grid {
-    position: relative; /* Required for Packery */
-    width: 100%; /* Full width of the container */
-    margin: 0 auto; /* Center the grid on the page */
-    z-index: 0;
-    min-height: 100vh;
-  }
-  
-  .grid-item {
-    position: absolute; /* Packery handles item placement */
-    width: 100%; /* Fixed width for items */
-    height: auto; /* Height depends on image */
-    box-sizing: border-box;
-    padding: 3px;
-  
-  }
-  
-  .grid-item img {
-    display: block; /* Prevent inline spacing around images */
-    width: 100%; /* Fit image to container width */
-    height: auto; /* Maintain aspect ratio */
-  }
-
-@media (min-width: 640px)  {.grid-item {width: 50%}}
-@media (min-width: 960px)  {.grid-item {width: 33.333%}}
-@media (min-width: 1280px) {.grid-item {width: 25%}}
-@media (min-width: 1600px) {.grid-item {width: 20%}}
-@media (min-width: 1920px) {.grid-item {width: 16.666%}}
-@media (min-width: 2240px) {.grid-item {width: 14.2857%}}
