--- a/templates/catagories/hospitality.html
+++ b/templates/catagories/hospitality.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <link href="{{ url_for('static', filename='styles/base.css') }}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='styles/catagories/history.css') }}" rel="stylesheet" />
 </head>
 
 
