--- a/static/styles/catagories/preserving.css
+++ b/static/styles/catagories/preserving.css
@@ -26,3 +26,15 @@
   position: absolute;
   z-index: 1;
 }
+
+@media (max-width: 800px) {
+  .pagetitle {
+    padding-left: 15px;
+  }
+}
+@media (max-width: 640px) {
+  .pagetitle{
+    font-size: 3em;
+    padding-top: 6.4em;
+  }
+}
