--- a/templates/catagories/preserving.html
+++ b/templates/catagories/preserving.html
@@ -86,6 +86,11 @@
         <img src="{{ url_for('static', filename='/img/preserving/IMG_7949.jpg') }}">
     </div>
     <div class="grid-item">
+        <video autoplay loop muted>
+            <source src="{{ url_for('static', filename='/img/preserving/preserving2.mp4') }}" type="video/mp4">
+        </video>
+    </div>
+    <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/preserving/IMG_8216.jpg') }}">
     </div>
     <div class="grid-item">
