--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,6 +18,7 @@
         </h1>
         <h1>Email:<a href="mailto:nelsonart@ymail.com"> nelsonart@ymail.com</a><br><br>
         <a href="https://bethnelsoncv.blogspot.com/" target="_blank">CV: Beth's other projects.</a></h1>
+        <h1> Please reach out for more details about Beth's involvement with The Farm.</h1>
         
     </div>
 
