--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,11 +14,10 @@
 
     <div class="beth">
         <img src="{{ url_for('static', filename='/img/history/interior/IMG_9675.jpg') }}">
-        <h1>The Farm catalogues the work of Beth Nelson and her multidisiplinary role managing and restoring one historic property in Sonoma County, California.
+        <h1>The Farm catalogues the work of Beth Nelson and her multidisiplinary role managing and restoring one historic property in Sonoma County, California. Please reach out for more details about Beth's involvement with The Farm.
         </h1>
         <h1>Email:<a href="mailto:nelsonart@ymail.com"> nelsonart@ymail.com</a><br><br>
         <a href="https://bethnelsoncv.blogspot.com/" target="_blank">CV: Beth's other projects.</a></h1>
-        <h1> Please reach out for more details about Beth's involvement with The Farm.</h1>
         
     </div>
 
