--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -18,3 +18,9 @@ padding-top: 5%;
     justify-content: space-between;
     align-items: center;
 }
+
+@media (max-width: 640px) {
+    .footmenu {
+        font-size: 1.2em;
+    }
+}
