--- a/templates/catagories/hospitality.html
+++ b/templates/catagories/hospitality.html
@@ -41,22 +41,23 @@
 
         {% include 'footer.html' %}
 
-<script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
-<script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
-<script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const grid = document.querySelector('.grid');
-        const pckry = new Packery(grid, {
-            itemSelector: '.grid-item',
-            percentPosition: true
-        });
-
-        // Ensure layout happens after images are loaded
-        imagesLoaded(grid).on('progress', function () {
-            pckry.layout();
-        });
-    });
+        <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
+        <script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
+        <script>
+            window.onload = () => {
+                const grid = document.querySelector('.grid');
+                if (!grid) return; // Avoid errors if grid is not found
+        
+                const pckry = new Packery(grid, {
+                    itemSelector: '.grid-item',
+                    percentPosition: true
+                });
+        
+                // Ensure layout happens after ALL images are loaded
+                imagesLoaded(grid).on('always', function () {
+                    pckry.layout();
+                });
+            };
     </script>
 
 </body>
