--- a/templates/catagories/vineyard.html
+++ b/templates/catagories/vineyard.html
@@ -37,7 +37,7 @@
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_3443.jpg') }}">
         </div> 
         <div class="grid-item">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="{{ url_for('static', filename='/img/vineyard/signpainter.mp4') }}" type="video/mp4">
             </video>
         </div>      
@@ -55,7 +55,7 @@
              <img src="{{ url_for('static', filename='/img/vineyard/IMG_8230.jpg') }}">
         </div>
         <div class="grid-item">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="{{ url_for('static', filename='/img/vineyard/crane.mp4') }}" type="video/mp4">
             </video>
             </div>
@@ -69,7 +69,7 @@
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8291.jpg') }}">
         </div>
         <div class="grid-item">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="{{ url_for('static', filename='/img/vineyard/harvest.mp4') }}" type="video/mp4">
             </video>
             </div>
@@ -77,28 +77,29 @@
             <img src="{{ url_for('static', filename='/img/vineyard/IMG_8716.jpg') }}">
         </div>
         <div class="grid-item">
-            <video autoplay loop muted>
+            <video autoplay loop muted playsinline>
                 <source src="{{ url_for('static', filename='/img/vineyard/harvest2.mp4') }}" type="video/mp4">
             </video>
     </div>
 </div>
 
-<script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://unpkg.com/packery@2.1.2/dist/packery.pkgd.min.js"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', () => {
+    window.onload = () => {
         const grid = document.querySelector('.grid');
+        if (!grid) return; // Avoid errors if grid is not found
+
         const pckry = new Packery(grid, {
             itemSelector: '.grid-item',
             percentPosition: true
         });
 
-        // Ensure layout happens after images are loaded
-        imagesLoaded(grid).on('progress', function () {
+        // Ensure layout happens after ALL images are loaded
+        imagesLoaded(grid).on('always', function () {
             pckry.layout();
         });
-    });
+    };
 </script>
 
 {% include 'footer.html' %}
