--- a/templates/catagories/history.html
+++ b/templates/catagories/history.html
@@ -100,7 +100,7 @@
         <img src="{{ url_for('static', filename='/img/history/restoration_8.jpg') }}">
     </div>
     <div class="grid-item">
-        <img src="{{ url_for('static', filename='/img/history/IMG_5220.jpg') }}">
+        <img src="{{ url_for('static', filename='img/history/IMG_5220.jpg') }}">
     </div>
     <div class="grid-item">
         <video autoplay loop muted playsinline>
@@ -108,7 +108,7 @@
         </video>
         </div>
         <div class="grid-item">
-            <img src="{{ url_for('static', filename='/img/history/restoration3.png') }}">
+            <img src="{{ url_for('static', filename='img/history/resto3.png') }}">
         </div>
     <div class="grid-item">
         <img src="{{ url_for('static', filename='/img/history/IMG_0035.jpg') }}">
